--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /implementation/pcappp-test/build/
 /implementation/pcappp-test/testfiles/testfiles/equinix-nyc.dirA.20180517-125910.UTC.anon.pcap
+/implementation/pcappp-test/testfiles/testfiles/tuples.dump
