--- a/implementation/pcappp-test/Makefile
+++ b/implementation/pcappp-test/Makefile
@@ -42,12 +42,14 @@ BOOST_LIB = /usr/lib/x86_64-linux-gnu/
 # Boost serialization library  (filename excluding lib and .a)
 BOOST_SERIALIZATION = -lboost_serialization
 
+#openMP flag (include both at compile time & link time to prevent unecessary warnings)
+OPENMP = -fopenmp
 # All Target
 all:
 #	if not [ -d build ]; then mkdir build; fi
 	if [ ! -d "./build" ]; then   mkdir build; fi
-	g++ main.cpp $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -L ${BOOST} -c -o build/main.o
-	g++ $(PCAPPP_LIBS_DIR) -static-libstdc++ -o build/a.out build/main.o $(PCAPPP_LIBS) -I $(BOOST) -L $(BOOST_LIB) $(BOOST_SERIALIZATION)
+	g++ main.cpp $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -L ${BOOST} -c -o build/main.o $(OPENMP)
+	g++ $(PCAPPP_LIBS_DIR) -static-libstdc++ -o build/a.out build/main.o $(PCAPPP_LIBS) -I $(BOOST) -L $(BOOST_LIB) $(BOOST_SERIALIZATION) $(OPENMP)
 	./build/a.out
 
 # Clean Target
