--- a/implementation/project/Makefile
+++ b/implementation/project/Makefile
@@ -45,12 +45,18 @@ BOOST_SERIALIZATION = -lboost_serialization
 #openMP flag (include both at compile time & link time to prevent unecessary warnings)
 OPENMP = -fopenmp
 # All Target
-all:
-#	if not [ -d build ]; then mkdir build; fi
+all: build run
+
+build:
 	if [ ! -d "./build" ]; then   mkdir build; fi
 	g++ src/main.cpp $(PCAPPP_BUILD_FLAGS) $(PCAPPP_INCLUDES) -L ${BOOST} -c -o build/main.o $(OPENMP) -O0 #TODO REMOVE -O0 (disables compiler optimizations)
 	g++ $(PCAPPP_LIBS_DIR) -static-libstdc++ -o build/a.out build/main.o $(PCAPPP_LIBS) -I $(BOOST) -L $(BOOST_LIB) $(BOOST_SERIALIZATION) $(OPENMP) -O0 #TODO REMOVE -O0 (disables compiler optimizations)
+
+run:
 	./build/a.out
+
+runSudo:  #for access to network interfaces
+	sudo -S ./build/a.out
 
 # Clean Target
 clean:
