--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /implementation/writer/cmake-build-debug/
 /implementation/writer_v2/build/
 /implementation/writer_v2/cmake-build-debug/
+/implementation/writer_v3/build/
+/implementation/writer_v3/cmake-build-debug/
