--- a/implementation/writer_v3/CMakeLists.txt
+++ b/implementation/writer_v3/CMakeLists.txt
@@ -27,7 +27,7 @@ link_directories(/usr/local/lib/pcappluplus)
 
 #include_directories(${pcapplusplus_INCLUDE_DIRS})
 
-add_executable(pcappp_test src/main.cpp src/Model/IPTuple.h src/Reader/Reader.h src/Converter/Converter.h src/Model/RawContainer.h src/Model/Aggregate.h src/Model/AggregateST.h src/Model/Aggregate2.h src/Model/CompressedBucket.h src/)
+add_executable(pcappp_test src/main.cpp src/Model/IPTuple.h src/Converter/Converter.h src/Model/RawContainer.h  src/Model/AggregateST.h src/Model/CompressedBucket.h src/)
 
 #target_link_libraries(BoostTest ${pcapplusplus_LIBRARIES})
 
