--- a/implementation/writer_v3/Makefile
+++ b/implementation/writer_v3/Makefile
@@ -46,7 +46,7 @@ BOOST_SERIALIZATION = -lboost_serialization -lboost_iostreams
 OPENMP = -fopenmp
 # All Target
 
-WORKDIR = $(HOME)/testfiles/dir17/
+WORKDIR = $(HOME)/testfiles/dir
 
 
 .PHONY: all writer_build writer_run writer_runSudo clean writer_buildProfile writer_runProfile reader_build reader_run
@@ -79,7 +79,7 @@ writer_runProfile:
 	gprof ./build/writer/a.out gmon.out  > build/writerProfileResults/analysis.txt
 
 writer_run:
-	./build/writer/a.out $(WORKDIR)
+	./build/writer/a.out -o $(WORKDIR) -fI 5
 
 writer_runSudo:  #for access to network interfaces for live capture
 	sudo -S ./build/writer/a.out
@@ -97,7 +97,7 @@ reader_build:
 	g++ $(PCAPPP_LIBS_DIR) -static-libstdc++ -o build/reader/a.out build/reader/main.o $(PCAPPP_LIBS) -I $(BOOST) -L $(BOOST_LIB) $(BOOST_SERIALIZATION)
 
 reader_run:
-	./build/reader/a.out $(WORKDIR)
+	./build/reader/a.out -i $(WORKDIR)
 
 reader_clean:
 	rm ./build/reader/main.o
